Bruteforce vs GA